<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".facultyactivity">

    <!--****** Custom Layout ******-->
 <!--   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/background2"
        tools:visibility="visible"
        android:layout_marginStart="0dp" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="377dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/whitebackground" />
    <!--End-->


    <!--Login HeadingText-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="63dp"
        android:text="@string/faculty_login"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/convergence"
        android:layout_marginStart="20dp" />
    <!--End-->

    <!--****** Please Signin HeadingText-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/texts"
        android:layout_below="@+id/faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/fplease_sign_in_to_continue"
        android:textColor="#AD000000"
        android:textSize="25sp"
        android:layout_marginStart="20dp" />
    <!--End-->

    <!--****** Forget Text ******-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fforgettext"
        android:layout_below="@id/flbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="80dp"
        android:fontFamily="sans-serif-light"
        android:layout_centerHorizontal="true"
        android:text="@string/fforgot_password"
        android:textColor="#AD000000"
        android:textSize="18sp"
        android:layout_marginStart="80dp" />
    <!--End-->

    <!--****** Login HeadingText ******-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logintext"
        android:layout_below="@+id/texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:text="@string/flogin"
        android:textColor="#F3000000"
        android:textSize="22sp" />
    <!--End-->

    <!--****** Login Button ******-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/flbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/teacherbackground"
        android:text="@string/floginbtn"
        android:layout_below="@id/flpassword"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp" />
    <!--End-->

    <!--******  Email EditText ******-->

    <androidx.appcompat.widget.AppCompatEditText

        android:inputType="textEmailAddress"
        android:id="@+id/flemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_below="@id/logintext"
        android:background="@drawable/border"
        android:hint="@string/femail"
        android:textColorHint="#7C000000"
        android:textColor="@color/black"
        android:padding="15.0dip"
        android:textSize="18.0sp" />
    <!--End-->

    <!--****** Password EditText ******-->
    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="textPassword"
        android:id="@+id/flpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flemail"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="30.0dip"
        android:background="@drawable/border"
        android:hint="@string/fpassword"
        android:padding="15.0dip"
        android:textColor="@color/black"
        android:textSize="18.0sp"
        android:textColorHint="#7C000000"/>
    <!--End-->

    <!--****** Dont Have Account Text ******-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textss"
        android:layout_below="@+id/flbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:text="Don\'t have an account?"
        android:textColor="#B9000000"
        android:textSize="20sp"
        android:layout_marginStart="20dp" />
    <!--End-->

    <!--****** Register Button  ******-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/flregister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/teacherbackground"
        android:text="Contact to the admin"
        android:layout_below="@id/textss"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>
    <!--End-->

</RelativeLayout>